--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
   <link type="text/css" href="resources/webgl-tutorials.css" rel="stylesheet" />
 </head>
 <style>
+  * { margin:0; padding:0; } /* to remove the top and left whitespace */
+
+  html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
+
   canvas {
     border: 1px solid black;
+    display:block; /* To remove the scrollbars */
+    height: 100vh;
+    width: 100vw;
   }
 </style>
 
@@ -80,19 +87,52 @@ vec2 computeColor(int nbX, int nbY, int vertexID) {
   return color;
 }
 
+float squareNorm (float zReal, float zIm) {
+  return zReal * zReal + zIm * zIm;
+}
+
+float computeMandelbrot(vec2 pt) {
+  // z{n+1} = z{n}^2 + C
+  float zReal = 0.;
+  float zIm = 0.;
+  float CReal = pt.x;
+  float CIm = pt.y;
+
+  int iterMax = 2000;
+  int iter = 0;
+  float res = 0.;
+  while (iter < iterMax) {
+    float zRealNext = zReal * zReal - (zIm * zIm) + CReal;
+    float zImNext = 2. * zReal * zIm + CIm;
+
+    zReal = zRealNext;
+    zIm = zImNext;
+
+    res = squareNorm(zReal, zIm);
+    if (4. < res) {
+      res = 0.;
+      break;
+    }
+    iter += 1;
+  }
+  return res;
+}
+
 void main() {
   vec2 pt = computePt(u_nbX, u_nbY, gl_VertexID);
-  vec2 color = computeColor(u_nbX, u_nbY, gl_VertexID);
+  // vec2 color = computeColor(u_nbX, u_nbY, gl_VertexID);
   
   gl_Position = u_matrix * vec4(pt, 0, 1);
-  gl_PointSize = 1.4;
-  v_color = vec4(color, 0, 1);
-  // if ((0 <= gl_VertexID) && (gl_VertexID < nbX))
-  // if (gl_VertexID == 3)
-  // if ((0.9 < x) && (x < 1.))
-  // {
-  //   v_color = vec4(0, 0, 1, 1);
-  // }
+  gl_PointSize = 1.;
+
+  vec3 color = vec3(0, 0, 0);
+  float norm = computeMandelbrot(pt);
+  if (0. < norm) {
+    color.r = norm / 10.;
+    color.g = 1. - norm / 1.5;
+    color.b = norm / 1.5;
+  }
+  v_color = vec4(color, 1);
 }
 `;
 
@@ -126,7 +166,7 @@ void main() {
 
     // let tt = computeDimension(numVerts);
     // console.log(tt);
-    const targetNumVerts = 5000;
+    const targetNumVerts = 1000000;
     let [nbX, nbY] = computeDimension(targetNumVerts);
 
     drawScene(nbX, nbY);
@@ -148,7 +188,7 @@ void main() {
       const projectionMatrix = m4.perspective(fieldOfViewRadians, aspect, zNear, zFar);
 
       // Setup the cameraMatrix which is the inverse of the viewMatrix
-      const cameraMatrix = m4.translation(-0.5, 0, 2.5);
+      const cameraMatrix = m4.translation(-0.5, 0, 2.);
 
       // Make a viewMatrix from the camera matrix.
       const viewMatrix = m4.inverse(cameraMatrix);
