--- a/index.html
+++ b/index.html
@@ -5,24 +5,39 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-  <title>WebGL2 - No Data - Mandelbrot set</title>
+  <title>WebGL2 - Mandelbrot set viewer</title>
   <link type="text/css" href="resources/webgl-tutorials.css" rel="stylesheet" />
 </head>
 <style>
-  * { margin:0; padding:0; } /* to remove the top and left whitespace */
+  * {
+    margin: 0;
+    padding: 0;
+  }
 
-  html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
+  /* to remove the top and left whitespace */
+
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+  }
+
+  /* just to be sure these are full screen*/
 
   canvas {
     border: 1px solid black;
-    display:block; /* To remove the scrollbars */
+    display: block;
+    /* To remove the scrollbars */
     height: 100vh;
     width: 100vw;
   }
 </style>
 
-<body>
+<body onload="main()">
   <canvas id="c"></canvas>
+  <div id="mouse-position" style="position: fixed;bottom: 0;right: 0;">
+    TOTO
+  </div>
 </body>
 <!--
 for most samples webgl-utils only provides shader compiling/linking and
@@ -32,8 +47,10 @@ and https://webgl2fundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
 for webgl-utils, m3, m4, and webgl-lessons-ui.
 -->
 <script src="resources/webgl-utils.js"></script>
+<script src="resources/simple-rotator.js"></script>
 <script>
   'use strict';
+  const canvas = document.getElementById("c");
   const gl = document.querySelector('#c').getContext('webgl2');
 
   const vs = `#version 300 es
@@ -98,7 +115,7 @@ float computeMandelbrot(vec2 pt) {
   float CReal = pt.x;
   float CIm = pt.y;
 
-  int iterMax = 2000;
+  int iterMax = 200;
   int iter = 0;
   float res = 0.;
   while (iter < iterMax) {
@@ -122,9 +139,6 @@ void main() {
   vec2 pt = computePt(u_nbX, u_nbY, gl_VertexID);
   // vec2 color = computeColor(u_nbX, u_nbY, gl_VertexID);
   
-  gl_Position = u_matrix * vec4(pt, 0, 1);
-  gl_PointSize = 1.;
-
   vec3 color = vec3(0, 0, 0);
   float norm = computeMandelbrot(pt);
   if (0. < norm) {
@@ -132,6 +146,15 @@ void main() {
     color.g = 1. - norm / 1.5;
     color.b = norm / 1.5;
   }
+
+  float zCoord = norm;
+  if (zCoord == 0.) {
+    zCoord = 0.;
+  }
+
+  gl_Position = u_matrix * vec4(pt, zCoord / 3., 1);
+  gl_PointSize = 1.;
+
   v_color = vec4(color, 1);
 }
 `;
@@ -147,6 +170,24 @@ void main() {
   outColor = v_color;
 }
 `;
+
+  function displayMousePosition() {
+    function getMousePos(canvas, evt) {
+      var rect = canvas.getBoundingClientRect();
+      return {
+        x: evt.clientX - rect.left,
+        y: evt.clientY - rect.top
+      };
+    }
+
+    canvas.addEventListener('mousemove', function (evt) {
+      var mousePos = getMousePos(canvas, evt);
+      var message = 'Mouse position: ' + mousePos.x + ', ' + mousePos.y;
+      // writeMessage(canvas, message);
+      var mouseTag = document.getElementById("mouse-position");
+      mouseTag.innerHTML = message;
+    }, false);
+  }
 
   function main() {
     // setup GLSL program
@@ -166,15 +207,31 @@ void main() {
 
     // let tt = computeDimension(numVerts);
     // console.log(tt);
-    const targetNumVerts = 1000000;
+    const targetNumVerts = 8e5; //1 000 000;
     let [nbX, nbY] = computeDimension(targetNumVerts);
 
-    drawScene(nbX, nbY);
+    // console.log(canvas);
+    let rotator = new SimpleRotator(canvas, drawScene, 3, 0, -70);
 
-    function drawScene(nbX, nbY) {
+    displayMousePosition();
+
+    // tell webgl to cull faces
+    gl.enable(gl.CULL_FACE);
+    gl.enable(gl.DEPTH_TEST);
+
+    drawScene();
+
+    function drawScene() {
+      // time *= 0.001;
       // draw
       webglUtils.resizeCanvasToDisplaySize(gl.canvas);
+
+      // Tell WebGL how to convert from clip space to pixels
       gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
+
+      // Clear the canvas
+      gl.clearColor(0, 0, 0, 0);
+      gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
       gl.useProgram(program);
 
@@ -188,19 +245,29 @@ void main() {
       const projectionMatrix = m4.perspective(fieldOfViewRadians, aspect, zNear, zFar);
 
       // Setup the cameraMatrix which is the inverse of the viewMatrix
-      const cameraMatrix = m4.translation(-0.5, 0, 2.);
+      const cameraMatrix = m4.translation(-0.5, 0, 5.);
 
       // Make a viewMatrix from the camera matrix.
       const viewMatrix = m4.inverse(cameraMatrix);
-      const viewProjectionMatrix = m4.multiply(projectionMatrix, viewMatrix);
+      // console.log(viewMatrix);
+
+      let modelview = m4.transpose(rotator.getViewMatrix());
+      // console.log(modelview);
+
+      const viewProjectionMatrix = m4.multiply(projectionMatrix, modelview); //, viewMatrix);
 
       // Set the matrix.
       gl.uniformMatrix4fv(matrixLoc, true, viewProjectionMatrix);
 
       const numVerts = nbX * nbY;
       const offset = 0;
+      // console.log("BEFORE");
       gl.drawArrays(gl.POINTS, offset, numVerts);
+      // console.log("AFTER");
+      // requestAnimationFrame(drawScene);
     }
+    // requestAnimationFrame(drawScene);
+
 
     function computeDimension(numVerts) {
       // nbX / nbY = 3 / 2
@@ -226,6 +293,15 @@ void main() {
         0, 0, 0, 1,
       ],
 
+    transpose: function (m) {
+      return [
+        m[0], m[4], m[8], m[12],
+        m[1], m[5], m[9], m[13],
+        m[2], m[6], m[10], m[14],
+        m[3], m[7], m[11], m[15],
+      ];
+    },
+
     translation: function (tx, ty, tz) {
       return [
         1, 0, 0, tx,
@@ -241,7 +317,7 @@ void main() {
 
     // Give it an ugly name to avoid to use it outside
     multiply2Matrices: function (a, b) {
-      let res = Array(4 * 4).fill(0);
+      let res = Array(4 * 4);
 
       for (let i = 0; i < 4; ++i) {
         for (let j = 0; j < 4; ++j) {
@@ -362,7 +438,7 @@ void main() {
     },
   }
 
-  main();
+  // main();
 </script>
 
 
