--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 <body onload="main()">
   <canvas id="c"></canvas>
   <div id="mouse-position" style="position: fixed;bottom: 0;right: 0;">
-    TOTO
   </div>
 </body>
 <!--
@@ -99,7 +98,7 @@ float computeMandelbrot(vec2 pt, int salt) {
   float CIm = pt.y;
 
   int iter = 0;
-  int iterMax = 400 + salt;
+  int iterMax = 500 + salt;
   float res = 0.;
   while (iter < iterMax) {
     float zRealNext = zReal * zReal - (zIm * zIm) + CReal;
@@ -122,11 +121,11 @@ void main() {
   vec2 pt = computePt(u_nbX, u_xMin, u_xMax, u_nbY, u_yMin, u_yMax, gl_VertexID);
   
   vec3 color = vec3(0, 0, 0);
-  float norm = computeMandelbrot(pt, gl_VertexID % 97);
+  float norm = computeMandelbrot(pt, gl_VertexID % 997);
   if (0. < norm) {
-    color.r = norm / 10.;
-    color.g = 1. - norm / 1.5;
-    color.b = norm / 2.5;
+    color.r = 1. - norm / .5;
+    color.g = norm / 2.;
+    color.b = norm / 1.5;
   }
 
   float zCoord = norm;
@@ -134,7 +133,7 @@ void main() {
     zCoord = 0.;
   }
 
-  gl_Position = u_matrix * vec4(pt, zCoord / 4., 1);
+  gl_Position = u_matrix * vec4(pt, -zCoord / 2., 1);
   gl_PointSize = 1.5;
 
   v_color = vec4(color, 1);
@@ -190,7 +189,225 @@ void main() {
     let allY = tmp.map(vec => vec[1]);
     let minY = Math.min(...allY);
     let maxY = Math.max(...allY);
-    // return tmp;
+    return [minX, maxX, minY, maxY];
+  }
+
+  function computeFrustumExtremities(viewProjectionMatrix, zNear, zFar) {
+    let frustum = {
+      "lbn": [-zNear, -zNear, -zNear, zNear],
+      "rbn": [zNear, -zNear, -zNear, zNear],
+      "ltn": [-zNear, zNear, -zNear, zNear],
+      "rtn": [zNear, zNear, -zNear, zNear],
+      "lbf": [-zFar, -zFar, zFar, zFar],
+      "rbf": [zFar, -zFar, zFar, zFar],
+      "ltf": [-zFar, zFar, zFar, zFar],
+      "rtf": [zFar, zFar, zFar, zFar],
+    };
+    let mInv = m4.inverse(viewProjectionMatrix);
+    let frustumWorld =
+      Object.assign({},
+        ...Object.keys(frustum).map(k => ({ [k]: m4.vectMult(mInv, frustum[k]).slice(0, 3) })));
+
+    return frustumWorld;
+  }
+
+  function addVec(v0, v1) {
+    let res = Array(v0.length);
+    for (const i of res.keys()) {
+      res[i] = v0[i] + v1[i];
+    }
+    return res;
+  }
+
+  function createVec(p0, p1) {
+    let res = Array(p0.length).fill(0);
+    return res.map((val, idx) => p1[idx] - p0[idx]);
+  }
+
+  function normaliseVec(vec) {
+    let norm = vec.reduce((acc, val) => acc + val * val, 0);
+    norm = Math.sqrt(norm);
+    return vec.map(val => val / norm);
+  }
+
+  function crossProduct(p0, p1) {
+    return [
+      p0[1] * p1[2] - p0[2] * p1[1],
+      p0[2] * p1[0] - p0[0] * p1[2],
+      p0[0] * p1[1] - p0[1] * p1[0]
+    ];
+  }
+
+  function computePlane(p0, p1, p2, p3) {
+    let planePts = [p0, p1, p2, p3];
+    let ptInPlane = planePts.
+      reduce((acc, pt) => addVec(acc, pt),
+        [0, 0, 0]).
+      map(value => (1 / 4) * value);
+    let vRight = createVec(p0, p1);
+    let vTop = createVec(p0, p2);
+    vRight = normaliseVec(vRight);
+    vTop = normaliseVec(vTop);
+    let vNormal = crossProduct(vRight, vTop);
+    vNormal = normaliseVec(vNormal);
+    return [ptInPlane, vNormal];
+  }
+
+  function computeFrustumPlanes(frustum) {
+    let planes = {
+      "planeFar": ["lbf", "rbf", "ltf", "rtf"],    // far
+      "planeLeft": ["lbn", "lbf", "ltn", "ltf"],   // left
+      "planeNear": ["rbn", "lbn", "rtn", "ltn"],   // near
+      "planeRight": ["rbf", "rbn", "rtf", "rtn"],  // right
+      "planeTop": ["ltf", "rtf", "ltn", "rtn"],    // top
+      "planeBottom": ["lbn", "rbn", "lbf", "rbf"], // bottom
+    }
+    planes =
+      Object.assign({},
+        ...Object.keys(planes).
+          map(k => ({
+            [k]: computePlane.
+              apply(null, planes[k].map(val => frustum[val]))
+          })));
+    console.log("planes");
+    console.log(planes);
+    return planes;
+  }
+
+  function dot(pt, vNormal) {
+    let res = 0;
+    for (const i of pt.keys()) {
+      res += pt[i] * vNormal[i];
+    }
+    return res;
+  }
+
+  function computePlaneEquation(pt, vNormal) {
+    // return: [a, b, c, d] of a plane equation in form:
+    // ax + by + cz = d
+    const d = dot(pt, vNormal);
+    return vNormal.concat([d]);
+  }
+
+  function isPerp(v0, v1) {
+    const eps = 1e-10;
+    return Math.abs(dot(v0, v1)) < eps;
+  }
+
+  // function planeIntersection(p0, p1) {
+  //   // Compute vector director of the line
+  //   const v0 = p0.slice(0, 3);
+  //   const v1 = p1.slice(0, 3);
+  //   let vLine = normaliseVec(crossProduct(v0, v1));
+  //   console.log(vLine);
+  //   // Compute a point which is on the line
+  //   // Solve a matricial system with an arbitrary last equation
+  //   // Test with  y = 0 equation
+  //   const isPerp = Math.abs(dot(vLine, [1, 0, 0])) < 1e-6;
+  //   console.log(dot(vLine, [0, 1, 0]));
+  //   console.log(Math.abs(dot(vLine, [0, 1, 0])));
+  //   console.log(isPerp);
+  // }
+
+  function computeSegment(p0, p1) {
+    let vecDirector = createVec(p0, p1);
+    vecDirector = normaliseVec(vecDirector);
+    return { "ptStart": p0, "ptEnd": p1, "vec": vecDirector };
+  }
+
+  function planeSegmentIntersection(plane, line) {
+    // Equation cartesienne for a plane: ax + by + cz = d
+    // Equation parametric for a line: pt + t * vecDirector
+    const vNormal = plane.slice(0, 3);
+    const d = plane[3];
+    const ptStart = line["ptStart"];
+    const ptEnd = line["ptEnd"];
+    const vecDirector = line["vec"];
+
+    // if the normal vector to the plane and the vector director of
+    // the line are perpenticular, there's no intersection
+    if (isPerp(vNormal, vecDirector)) {
+      return null;
+    }
+
+    const t = (d - dot(vNormal, ptStart)) / dot(vNormal, vecDirector);
+    let tEnd;
+    const eps = 1e-2;
+    if (eps < Math.abs(vecDirector[0])) {
+      tEnd = (ptEnd[0] - ptStart[0]) / vecDirector[0];
+    }
+    else if (eps < Math.abs(vecDirector[1])) {
+      tEnd = (ptEnd[1] - ptStart[1]) / vecDirector[1];
+    }
+    else if (eps < Math.abs(vecDirector[2])) {
+      tEnd = (ptEnd[2] - ptStart[2]) / vecDirector[2];
+    }
+
+    // console.log("tEnd: " + tEnd);
+    // console.log("t: " + t);
+    if ((0 < t) && (t < tEnd)) {
+      const pt = addVec(ptStart, vecDirector.map(val => val * t));
+      return pt;
+    }
+    else {
+      return null;
+    }
+  }
+
+  function clipSpace2(viewProjectionMatrix, zNear, zFar) {
+    let frustumWorld =
+      computeFrustumExtremities(viewProjectionMatrix, zNear, zFar);
+      // console.log(frustumWorld);
+    // let frustumPlane = computeFrustumPlanes(frustumWorld);
+    // let planeLeft = computePlaneEquation.apply(null, frustumPlane["planeLeft"]);
+    // console.log(planeLeft);
+    // // Plane of equation z = 0
+    // const targetPlane = [0, 0, 1, 0];
+    // planeIntersection(planeLeft, targetPlane);
+    // const segmentLBN2LBF = computeSegment(frustumWorld["lbn"], frustumWorld["lbf"]);
+    // console.log(segmentLBN2LBF);
+    // // console.log(isPerp([0, 0, 1], segmentLBN2LBF["vec"]));
+    // // if (!isPerp([0, 0, 1], segmentLBN2LBF["vec"])) {
+    // const pt = planeSegmentIntersection([0, 0, 1, 0], segmentLBN2LBF);
+    // //   console.log(pt);
+    // // }
+    // const lineLBN2RBN = computeSegment(frustumWorld["lbn"], frustumWorld["rbn"]);
+    // console.log(lineLBN2RBN);
+    // console.log(isPerp([0, 0, 1], lineLBN2RBN["vec"]));
+    // console.log(planeSegmentIntersection([0, 0, 1, 0], lineLBN2RBN));
+
+    // Plane of equation z = 0
+    const planeToClip = [0, 0, 1, 0];
+    const frustumLines = [
+      ["lbn", "rbn"],
+      ["rbn", "rtn"],
+      ["rtn", "ltn"],
+      ["ltn", "lbn"],
+      ["lbn", "lbf"],
+      ["rbn", "rbf"],
+      ["rtn", "rtf"],
+      ["ltn", "ltf"],
+      ["lbf", "rbf"],
+      ["rbf", "rtf"],
+      ["rtf", "ltf"],
+      ["ltf", "lbf"],
+    ];
+    let intersectionPoints =
+      frustumLines
+        .map(function (couple) {
+          const couplePts = couple.map(val => frustumWorld[val]);
+          const seg = computeSegment.apply(null, couplePts);
+          return planeSegmentIntersection(planeToClip, seg);
+        })
+        .filter(pt => pt != null)
+        ;
+    // console.log(intersectionPoints);
+    let allX = intersectionPoints.map(vec => vec[0]);
+    let minX = Math.min(...allX);
+    let maxX = Math.max(...allX);
+    let allY = intersectionPoints.map(vec => vec[1]);
+    let minY = Math.min(...allY);
+    let maxY = Math.max(...allY);
     return [minX, maxX, minY, maxY];
   }
 
@@ -211,7 +428,7 @@ void main() {
       return d * Math.PI / 180;
     }
 
-    const targetNumVerts = 2e5;
+    const targetNumVerts = 8e5;
     let [nbX, nbY] = computeDimension(targetNumVerts);
     const xAbsolutMin = -2;
     const xAbsolutMax = .5;
@@ -292,13 +509,16 @@ void main() {
       //   [-zFar, -zFar, zFar, zFar]));
       // console.log(m4.vectMult(m4.inverse(viewProjectionMatrix),
       //   [zNear, zNear, -zNear, zNear]));
-      let [xClipMin, xClipMax, yClipMin, yClipMax] = clipSpace(viewProjectionMatrix, zNear, zFar);
-      console.log([xClipMin, xClipMax, yClipMin, yClipMax]);
+      // let [xClipMin, xClipMax, yClipMin, yClipMax] = clipSpace(viewProjectionMatrix, zNear, zFar);
+      let [xClipMin, xClipMax, yClipMin, yClipMax] = clipSpace2(viewProjectionMatrix, zNear, zFar);
+      // console.log("clipping coordinate");
+      // console.log([xClipMin, xClipMax, yClipMin, yClipMax]);
       let xEffectiveMin = Math.max(xClipMin, xAbsolutMin);
       let xEffectiveMax = Math.min(xClipMax, xAbsolutMax);
       let yEffectiveMin = Math.max(yClipMin, yAbsolutMin);
       let yEffectiveMax = Math.min(yClipMax, yAbsolutMax);
       // console.log(m4.vectMult(projectionMatrix, [right, top, -zNear, 1]));
+      clipSpace2(viewProjectionMatrix, zNear, zFar);
 
       // m4.print(m4.inverse(viewProjectionMatrix));
       // console.log(m4.vectMult(m4.inverse(viewProjectionMatrix), [-1, -1, -1, 1]));
@@ -319,10 +539,10 @@ void main() {
       //   console.log(m4.vectMult(m4.inverse(viewProjectionMatrix),
       //   [1, -1, -1, (1 - (-0.475 * -1)) / 0.525]));
 
-      console.log("xEffectiveMin: " + xEffectiveMin);
-      console.log("xEffectiveMax: " + xEffectiveMax);
-      console.log("yEffectiveMin: " + yEffectiveMin);
-      console.log("yEffectiveMax: " + yEffectiveMax);
+      // console.log("xEffectiveMin: " + xEffectiveMin);
+      // console.log("xEffectiveMax: " + xEffectiveMax);
+      // console.log("yEffectiveMin: " + yEffectiveMin);
+      // console.log("yEffectiveMax: " + yEffectiveMax);
       // tell the shader the number of verts
       // gl.uniform1f(xMinLoc, xAbsolutMin);
       // gl.uniform1f(xMaxLoc, xAbsolutMax);
@@ -346,7 +566,7 @@ void main() {
     function doWheel(evt) {
       const deltaSign = Math.sign(evt.deltaY);
       // console.log("deltaSign: " + deltaSign);
-      let factor = 1. + deltaSign * 1e-1;
+      let factor = 1. + deltaSign * 5e-2;
       fieldOfViewRadians *= factor;
       fieldOfViewRadians = Math.min(fieldOfViewRadians, 2 * Math.PI / 3);
       // console.log("fieldOfViewRadians: " + fieldOfViewRadians);
